@@ -8,7 +8,12 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
-06/06/08 Remi Ricard (papaDoc)
+06/17/08 Remi Ricard (papaDoc)
+
+        *  Move the computation of the Relative Rotation for the fixed joint
+           into a function.
+
+06/16/08 Remi Ricard (papaDoc)
 
         * Add testunit for the dxJointFixed
 
